--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,29 @@ body {
     outline: none;
 }
 
+.circle {
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
+  outline: none;
+}
+
+.navbar{
+  display: none;
+  background: none;
+  position: fixed;
+}
+
 .index-buttons {
   opacity: 0;
   display: flex;
   justify-content:center;
+}
+
+.navbar-brand{
+  color: white;
+  font-weight: 800;
+  font-size: 20px;
 }
 
 .slideInFromBottom {
@@ -113,9 +132,10 @@ body {
   font-size: 7em;
   font-weight: 800;
   margin: 0;
+  vertical-align: middle;
 }
 
-img {
+.index-image {
     display: inline;
     margin: 0 auto;
     height: 100%;
@@ -138,7 +158,79 @@ footer {
   color: #3939ef;
 }
 
-.bg1
-{
+/* Large desktops and laptops */
+@media (min-width: 1200px) {
 
+}
+
+/* Landscape tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+
+}
+
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+
+}
+
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+
+}
+
+/* Portrait phones and smaller */
+@media (max-width: 480px) {
+  .splash {
+    height: 70vh;
+  }
+  .image-cropper {
+    display: none;
+  }
+
+  .index-button{
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    background-color: white;
+    color: #3939ef;
+    width: 400px;
+    margin:20px auto;
+
+    vertical-align: top;
+    height: 60px;
+    padding: 0;
+    font-size: 22px;
+    text-align: center;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+    border: 0;
+    border-bottom: 2px solid #80399d;
+    cursor: pointer;
+    -webkit-box-shadow: inset 0 -2px #80399d;
+    box-shadow: inset 0 -2px #80399d;
+
+  }
+
+  .index-button h2 {
+    font-size: 40px;
+    margin: 10px;
+  }
+
+  .index-buttons {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+  }
+
+.index-button:active {
+  top: 1px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+  .fa {
+    font-size: 35px;
+    margin: 15px;
+  }
 }
