--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body {
   font-size: 7em;
   font-weight: 800;
   margin: 0;
+  text-shadow: 2px 2px 8px #000000;
+
 }
 
 @keyframes makeVisible {
@@ -85,6 +87,10 @@ body {
   opacity: 0;
   display: flex;
   justify-content:center;
+}
+
+.index-button h2 {
+  text-shadow: 2px 2px 8px #000000;
 }
 
 .navbar-brand{
