--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .splash-title h1, .splash-title h2 {
-  background-color: none;
+  background: none;
   font-size: 10em;
   font-weight: 800;
   margin: 0;
@@ -100,13 +100,9 @@ body {
 }
 
 .navbar-inverse .navbar-nav>li>a {
-  color: darksalmon;
+  color: white;
   font-size: 20px;
   font-weight: 800;
-}
-
-.nav li a{
-  color: #30415D;
 }
 
 .index-buttons {
@@ -215,5 +211,5 @@ footer {
 
 /* Portrait phones and smaller */
 @media (max-width: 480px) {
-  
+
 }
