--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,15 @@ body {
 
 .splash-title h2 {
   font-size: 3em;
-  font-weight: 200;
+  font-weight: 400;
   color: white;
+}
+
+ul {
+  color: white;
+font-size: 2em;
+font-weight: 800;
+
 }
 
 
@@ -69,10 +76,19 @@ body {
   }
 }
 
+.splash-title {
+  border: white 12px solid;
+}
+
+.eater-splash-title {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+}
 
 .splash-title, .eater-splash-title {
   animation: 1s ease-out 0s 1 makeVisible;
-  border: white 12px solid;
   padding: 20px;
   margin-bottom: 50px;
 }
@@ -184,12 +200,32 @@ body {
 
 .eater-splash {
   background-blend-mode: normal;
-  background-image:  url('trophy1.JPG');
+  background-image:  url('nathans1.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 800px;
+}
+
+.image-cropper {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+
+.image-cropper img {
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
+}
+
+img#eater {
+  position: relative;
+  right: 60px;
 }
 
 .eater-splash-title h1 {
@@ -207,6 +243,25 @@ body {
     outline: none;
 }
 
+.video-button {
+  background-color: transparent;
+  border: none;
+  filter:grayscale(1);
+  transition: filter ease-in 0.2s;
+  height: 300px;
+  width: 300px;
+}
+
+.video-button img {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.video-button:hover {
+  filter:grayscale(0)
+}
+
 img#hotdog {
   position:relative;
   right: 45px;
@@ -218,27 +273,35 @@ img#headshot {
 }
 
 section {
-  height: 700px;
+  padding: 50px;
+  height: 600px;
   text-align: center;
 }
 
 section h1 {
-  font-size: 90px;
-  font-weight: 200;
+  font-size: 30px;
+  font-weight:800;
   color: white;
   margin-bottom: 35px;
 }
 
 #schedule {
-  background-image: url(cyclone1.jpg);
+  background-color: rgba(82, 30, 32, 0.94);
+}
+
+#press h1{
+  color: slategray;
+
 }
 
 #press {
+  box-shadow: -1px -1px 30px 11px;
+  background-color: #06283f;
 }
 
 #eater-bar {
   background-color: transparent;
-  transition: background-color 1s ease-in;
+  transition: background-color .3s ease-in;
 }
 
 .flex {
